changing to accessors and other tweaks